--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-data/
+.idea
+*.idea/
+.ipynb_checkpoints/
+.vscode
+__pycache__/
+**/.idea
+*/.ipynb_checkpoints/
+*/__pycache__/
+*/*/.idea/
+*/*/.ipynb_checkpoints/
+*/*/__pycache__/
+*.tar.gz
+*.json.gz
+*/*.json.gz
+.*.swp
+*.o
+*.bin
+*.csv
+*.vec
+*.log
+*.zip
+**/.zip
 
+cased_L-12_H-768_A-12/
+data/
+temp/
