--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ scikit-learn==0.22.1
 spacy==2.2.3
 requests==2.23.0
 numpy==1.18.1
+matplotlib==3.2.0
+seaborn==0.10.0
+tensorboard==1.15.0
+tensorflow==1.15.0
+tensorflow-estimator==1.15.1
+
