--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ requests==2.23.0
 numpy==1.18.1
 matplotlib==3.2.0
 seaborn==0.10.0
-tensorflow>=1.15.2
+tensorflow==1.15.2
 tensorflow-estimator==1.15.1
 spacy-stanfordnlp==0.1.3
