update evaluation scripts and update config file

--- a/evaluation/config/keyword_extractor_config.json
+++ b/evaluation/config/keyword_extractor_config.json
@@ -14,7 +14,7 @@
     "class": "PhraseExtractor",
     "kwargs": {
       "grammar": "GRAMMAR1",
-      "np_method": "NOUN_CHUNKS",
+      "np_method": "GRAMMAR",
       "np_tags": "NLTK",
       "stopwords": "NLTK"
     }
